tabla weekdata actualizad para usar fechas, tabla userHistory añadido para guardar historial, rute user-history para ver histrial otros cambios relacion en la vista de program y calendar, se ha eliminado paquete drizzle adicional por conflictos ajustes

--- a/src/pages/program/index.astro
+++ b/src/pages/program/index.astro
@@ -78,6 +78,11 @@ let weekDates = getWeekDates(weekOffset);
     <button class="bg-blue-500 text-white px-4 py-2 rounded mb-4" id="saveBtn"
       >Guardar Cambios</button
     >
+    <a href="/user-history">
+      <button class="bg-yellow-500 text-white px-4 py-2 rounded">
+        Historial de Users
+      </button>
+    </a>
     <div id="currentView">
       {
         days.map((day, index) => (
